Add options to randomize colours

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <button type="button">Select new grid size</button>
+  <div class="options">
+    <button type="button" id="change-grid-size">Select new grid size</button>
+    <button type="button" id="rand-grid-color">Randomize grid colour</button>
+    <button type="button" id="rand-draw-color">Randomize draw colour</button>
+  </div>
+  <div class="warning">Using any of the options above will reset the grid</div>
   <div class="grid-container"></div>
   <script src="./script.js"></script>
 </body>
