Add darkening effect

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <button type="button" id="change-grid-size">Select new grid size</button>
     <button type="button" id="rand-grid-color">Randomize grid colour</button>
     <button type="button" id="rand-draw-color">Randomize draw colour</button>
+    <button type="button" id="toggle-darkening">Toggle darkening effect</button>
   </div>
   <div class="warning">Using any of the options above will reset the grid</div>
   <div class="grid-container"></div>
